--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 #body {
   border: 3px solid black;
   background-color: rgb(241, 239, 237);
@@ -25,24 +29,32 @@ h2, h3 {
   margin-bottom: 10px;
 }
 
+#leftSideContainer {
+  display: flex;
+  flex-direction: column;
+  width: 70%
+}
+
 #itineraryPreviewContainer {
   display: flex;
   border: 1px solid black;
-  width: 31%;
-  flex-direction: column;
+  flex-direction: row;
   background-color: white;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #weatherContainer {
   border: 1px solid black;
-  width: 31%;
   background-color: white;
+  height: 500px;
+  margin-top: 25px;
 }
 
 #savedItineraryListContainer {
   display: flex;
   border: 1px solid black;
-  width: 31%;
+  width: 25%;
   flex-direction: column;
   background-color: white;
 }
@@ -50,7 +62,7 @@ h2, h3 {
 #selectedChoicesContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 65%
 }
 
 #selectedChoicesContainer .selectedLabel {
@@ -61,18 +73,19 @@ h2, h3 {
 #selectedPark, #selectedBizarrerie, #selectedEatery {
   border: 1px solid black;
   height: 20px;
-  width: 90%;
+  width: 95%;
   margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 #moreDetailsContainer {
   border: 1px solid black;
   height: 200px;
-  width: 95%;
+  width: 30%;
   margin: 10px auto;
 }
 
-#save {
+.btn {
   width: 100px;
   margin: 10px;
 }
