--- a/styles/main.css
+++ b/styles/main.css
@@ -70,22 +70,32 @@ h2, h3 {
   align-self: start;
 }
 
+.flexRow {
+  display: flex;
+  align-items: center;
+}
+
 #selectedPark, #selectedBizarrerie, #selectedEatery {
   border: 1px solid black;
   height: 20px;
   width: 95%;
-  margin-bottom: 10px;
   margin-left: 10px;
 }
 
 #moreDetailsContainer {
   border: 1px solid black;
   height: 200px;
-  width: 30%;
+  width: 33%;
   margin: 10px auto;
 }
 
 .btn {
   width: 100px;
   margin: 10px;
+}
+
+.deets-btn {
+  width: 75px;
+  margin-left: 10px;
+  padding: 0;
 }
