--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,8 @@
+
+
 html {
   height: 100%;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #body {
@@ -7,7 +10,7 @@ html {
   background-color: rgb(241, 239, 237);
 }
 
-h2, h3 {
+h1, h2, h3 {
   text-align: center;
 }
 
@@ -64,12 +67,26 @@ h2, h3 {
 #selectedChoicesContainer {
   display: flex;
   flex-direction: column;
-  width: 65%
+  width: 53%
 }
 
 #selectedChoicesContainer .selectedLabel {
   margin-left: 10px;
   align-self: start;
+}
+
+#moreDetailsContainer {
+  border: 1px solid black;
+  display: block;
+  min-height: 65%;
+  overflow: auto;
+  width: 45%;
+  margin: 10px 10px;
+  padding: 10px;
+}
+
+#moreDetailsContainer h3, #moreDetailsContainer h4 {
+  margin: 0px;
 }
 
 .flexRow {
@@ -82,13 +99,6 @@ h2, h3 {
   height: 20px;
   width: 95%;
   margin-left: 10px;
-}
-
-#moreDetailsContainer {
-  border: 1px solid black;
-  height: 200px;
-  width: 33%;
-  margin: 10px auto;
 }
 
 .btn {
