Added formatting and logic to only allow for specified number of days to show

--- a/styles/main.css
+++ b/styles/main.css
@@ -129,11 +129,11 @@ img {
 
 
 
-#bck_image {
+.var {
   background-image: linear-gradient(
       rgba(255,255,255,0.5), 
-      rgba(255,255,255,0.25)), 
-      url( http://openweathermap.org/img/wn/10d@2x.png);
+      rgba(255,255,255,0.75)), 
+      var(--url);
 
   background-color: rgb(129, 158, 252);
   background-repeat: no-repeat;
@@ -141,9 +141,18 @@ img {
 }
 
 .big_temp {
-  font-size: 45px;
+  font-size: 25px;
   
 }
 .a{
+  height: 35px;
   color:rgb(129, 158, 252)
 }
+
+.blank {
+  width: 140;
+  height: 74;
+  border: 1 dotted;
+}
+
+
