--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
 html {
   height: 100%;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: Lato, sans-serif;
 }
 
 #body {
