--- a/styles/main.css
+++ b/styles/main.css
@@ -2,13 +2,17 @@
 
 html {
   height: 100%;
-  /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
   font-family: Lato, sans-serif;
 }
 
 #body {
   border: 3px solid black;
   background-color: rgb(241, 239, 237);
+}
+
+#container {
+  max-width: 1600px;
+  margin: auto;
 }
 
 h1, h2, h3 {
@@ -106,6 +110,7 @@ h1, h2, h3 {
   width: 100px;
   margin: 10px;
 }
+
 /*******************************************************************************/
 #weather {
   padding: 0;
@@ -113,13 +118,21 @@ h1, h2, h3 {
   box-sizing: 0;
 }
 
+#weather h3 {
+  margin: 5px auto;
+  text-align: left;
+}
+
 #weatherRow {
   display: grid;
-  gap: 10px;
+  gap: 5px;
   grid-template-columns: repeat(8, 1fr);
 }
 
-
+#weatherRow ul {
+  padding: 0px;
+  text-align: center;
+}
 
 img {
   background-color: rgb(129, 158, 252);
@@ -129,12 +142,14 @@ img {
   border: .5px black solid;
  
 }
+
 .dates {
   display: flex;
   flex-direction: column;
-  width: 100px;
-    font-size: small;
-    list-style-type: none;    
+  align-items: center;
+  font-size: 15px;
+  list-style-type: none; 
+  margin: 0px;   
 }
 
 .date_container {
@@ -148,22 +163,23 @@ img {
 
 .var {
   background-image: linear-gradient(
-      rgba(255,255,255,0.5), 
-      rgba(255,255,255,0.75)), 
+      rgba(255,255,255,0.12), 
+      rgba(255,255,255,1)), 
       var(--url);
 
-  background-color: rgb(129, 158, 252);
+  /* background-color: rgb(129, 158, 252); */
+  background-color: rgb(var(--color));
   background-repeat: no-repeat;
-  
+  width: 100%;
 }
 
 .big_temp {
-  font-size: 25px;
-  
+  font-size: 20px;
+  margin-bottom: 5px;
 }
+
 .a{
-  height: 35px;
-  color:rgb(129, 158, 252)
+  height: 55px;
 }
 
 .deets-btn {
@@ -177,9 +193,6 @@ img {
   height: 74;
   border: 1 dotted;
 }
-
-
-
 
 .savedSingles {
   border: 1px solid black;
