--- a/styles/search.css
+++ b/styles/search.css
@@ -31,3 +31,11 @@ input {
   .hide {
     display: none;
   }
+
+#searchFunction{
+    margin-top: 1rem;;
+    padding-top: .5rem;
+    padding-left: .5rem;
+    border: 1px solid black;
+   
+}
