--- a/styles/main.css
+++ b/styles/main.css
@@ -309,3 +309,41 @@ h3 {
   border-radius: 4px;
   color: #ffffff;
 }
+
+.wrapper {
+  position: relative;
+  z-index: 1;
+}
+.hidden {
+  display: none;
+}
+
+.gold-box {
+  position: absolute;
+  padding: 75px;
+  z-index: 3; 
+  background: rgb(240, 239, 232);
+  background-image: linear-gradient(#00caaf, #0d7669);
+  transition: box-shadow .3s;;
+  width: 50%;
+  height:fit-content;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 10em;
+  text-align: left;
+}
+ul {
+  list-style-type: none;
+}
+
+
+
+.results-list {
+  padding:15px;
+  
+}
+.add-button {
+
+  margin-left: 25px;
+}
