--- a/styles/main.css
+++ b/styles/main.css
@@ -9,11 +9,15 @@ html {
 #body {
   border: 3px solid black;
   background-image: linear-gradient(#123f58 5%, #9dd2ee);
-
+  height: auto;
 }
 
 #mainContent {
-  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  height: 1353px;
 }
 
 #container {
@@ -102,18 +106,13 @@ h3 {
   margin: 10px 0px 3px 0px;
 }
 
-#mainContent {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  max-height: 1300px;
-}
+
 
 #leftSideContainer {
   display: flex;
   flex-direction: column;
-  width: 58%
+  width: 58%;
+  height: 100%;
 }
 
 .reqInputs {
@@ -132,16 +131,17 @@ h3 {
   background-image: linear-gradient(#ffe084 80%, #ad850d);
   justify-content: space-around;
   align-items: center;
+  max-height: 30%;
+  flex-grow: 3;
 }
 
 #weatherContainer {
   border: 3px solid #F35B04;
   border-radius: 8px;
   background-image: linear-gradient(#ffe084 , #ad850d);
-  height: 200px;
   margin-top: 25px;
-  height:fit-content
-  
+  height:fit-content;
+  min-height: 67%
 }
 
 #directionsContainer {
@@ -242,9 +242,12 @@ h3 {
 
 /*******************************************************************************/
 #weather {
-  padding: 10px;
+  padding: 0px 10px;
   margin: 0;
-  box-sizing: 0;
+}
+
+#weather h2 {
+  margin-top: 5px;
 }
 
 #weather h3 {
@@ -263,14 +266,6 @@ h3 {
   text-align: center;
 }
 
-/* img {
-  background-color: rgb(129, 158, 252);
-  margin: auto;
-  width: 50px;
-  height: 50px;
-  border: .5px black solid;
-} */
-
 .dates {
   display: flex;
   flex-direction: column;
@@ -278,6 +273,7 @@ h3 {
   font-size: 15px;
   list-style-type: none; 
   margin: 0px;   
+  max-height: 120px;
 }
 
 .date_container {
@@ -295,10 +291,10 @@ h3 {
       rgba(255,255,255,1)), 
       var(--url);
 
-  /* background-color: rgb(129, 158, 252); */
   background-color: rgb(var(--color));
   background-repeat: no-repeat;
   width: 100%;
+  height: 110px;
 }
 
 .big_temp {
@@ -306,8 +302,8 @@ h3 {
   margin-bottom: 5px;
 }
 
-.a{
-  height: 55px;
+.a {
+  min-height: 40px;
 }
 
 .deets-btn {
